--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
       ws.onmessage = (event) => {
         el = document.getElementById('server-time');
-        el.innerHTML = 'Server time: ' + event.data;
+        el.innerHTML = 'Server time is: ' + event.data;
       };
     </script>
   </head>
